# krypt

./: Cargo.toml  README.md  Readme.md
client/: Cargo.toml  build.rs
client/src/: clipboard.rs  config.rs  keyring.rs  lib.rs  main.rs  tasks.rs  util.rs
client/src/routes/: accounts.rs  keys.rs  mod.rs
server/: Cargo.toml  spin.toml
server/src/: encryption.rs  lib.rs  log.rs  models.rs  rate_limiting.rs  routes.rs  util.rs
server/src/routes/: accounts.rs  keys.rs  mod.rs  responses.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs
