[package]
name = "krypt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.6.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
anyhow = "1.0.102"
shared = { version = "0.1.0", path = "../shared" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
toml = "1.1.2"
rpassword = "7.5.2"
