[package]
name = "krypt-server"
authors = ["Parth-Bathe0142 <parth.bathe0142@gmail.com>"]
description = "Server for the keyring application"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk = "3.1.1"
anyhow = "1"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

bcrypt = "0.19.0"
aes-gcm = "0.10"
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
base64 = "0.21"